# GDELT_Downloader

./: .gitignore  .replit  compare_html_files.py  constants.py  data.html  data_clean.py  data_clean_panda.py  data_loader.py  gdelt.db  gdelt_db_ops.py  horizon.db  main.py  mysql_test.py  playground.py  pyproject.toml  query.py  test_db.py  url_fetcher.py  utils.py
api/: admin.py  country.py  events.py  keywords.py  lookup.py  main.py
db/: creation_sql.sql  pg2_db.py
gdelt_data/: 20241022130000.export.CSV  20241022131500.export.CSV  20241022133000.export.CSV  20241022134500.export.CSV  20241022140000.export.CSV  20241022143000.export.CSV  20241022144500.export.CSV  20241022150000.export.CSV  20241022151500.export.CSV  20241022153000.export.CSV  20241107110000.export.CSV  20241107111500.export.CSV  20241118134500.export.CSV  20241127144500.export.CSV  20241128090000.export.CSV  20241202084500.export.CSV  20241205081500.export.CSV  20241209143000.export.CSV  20241209144500.export.CSV  20241209154500.export.CSV  20241209160000.export.CSV  20241209161500.export.CSV  20241210091500.export.CSV  20241210100000.export.CSV  20241210101500.export.CSV  20241210143000.export.CSV  20241210144500.export.CSV  20241211113000.export.CSV  20241212103000.export.CSV  20241212110000.export.CSV  20241212111500.export.CSV  20241213133000.export.CSV  20241216094500.export.CSV  20241218131500.export.CSV  20241218133000.export.CSV  20241218134500.export.CSV  20241218140000.export.CSV  20241218141500.export.CSV  20241223120000.export.CSV  20241223121500.export.CSV  (+52 more)
tests/: test_time_funcs.py
(+9 files in other folders)
