[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gdelt-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "*"
beautifulsoup4 = "*"
psycopg2 = "*"
flask = "*"
flask-cors = "*"
freezegun = "*"

[tool.pytest.ini_options]
pythonpath = ["."]